# orch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  orch.code-workspace
.github/workflows/: build.yml  release.yml
core/: Cargo.toml  README.md
core/.github/workflows/: ci.yml  release.yml
core/examples/: alignment.rs  embeddings.rs  example_utils.rs  structured_data_generation.rs  structured_data_generation_basic.rs  structured_data_generation_blog.rs  structured_data_generation_capital.rs  text_generation.rs  text_generation_stream.rs  variants_derive.rs
core/src/: lib.rs  response.rs
core/src/alignment/: mod.rs  strategy.rs  strategy_builder.rs
core/src/execution/: builder.rs  executor.rs  mod.rs  response.rs  structured_executor.rs  text_executor.rs
core/src/lm/: builder.rs  error.rs  mod.rs  models.rs
core/src/lm/lm_provider/: mod.rs  models.rs
core/src/lm/lm_provider/anthropic/: builder.rs  config.rs  lm.rs  mod.rs  models.rs
core/src/lm/lm_provider/anthropic/client/: anthropic_client.rs  builder.rs  client.rs  config.rs  mod.rs  models.rs
core/src/lm/lm_provider/ollama/: builder.rs  config.rs  lm.rs  mod.rs  models.rs
core/src/lm/lm_provider/openai/: builder.rs  config.rs  llm.rs  lm.rs  mod.rs  models.rs
core/src/net/: mod.rs
crates/janus/: Cargo.toml
crates/janus/examples/: http_json.rs  test.rs  web_search.rs
crates/janus/src/: agent.rs  lib.rs  llm.rs  prompt.rs  text_completion.rs  tool.rs
crates/janus/src/builtins/: tools.rs
crates/orch/: Cargo.toml
crates/orch/examples/: basic.rs  http_json.rs  web_search.rs
crates/orch/src/: agent.rs  executor.rs  lib.rs  llm.rs  tool.rs  utils.rs
crates/orch/src/builtins/: tools.rs
crates/orch/src/core/net/: sse.rs
crates/orch/src/llm/: llm.rs  llm_provider_openai.rs  mod.rs  models.rs
crates/orch/src/llm/llm_provider/: mod.rs
crates/orch/src/llm/llm_provider/ollama/: llm.rs  models.rs
examples/: basic.rs  embeddings.rs  text_generation.rs  text_generation_stream.rs
response/: Cargo.toml
response/src/: lib.rs
response_derive/: Cargo.toml  README.md
response_derive/examples/: test.rs
response_derive/src/: attribute_impl.rs  derive_impl.rs  lib.rs
scripts/: ci.sh  examples.sh  utils.sh
src/: executor.rs
src/llm/: error.rs  models.rs
src/llm/llm_provider/: mod.rs  openai.rs
src/llm/llm_provider/ollama/: config.rs  llm.rs  mod.rs  models.rs
