[package]
name = "orch"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Language model orchestration library"
homepage = "https://github.com/guywaldman/orch"
repository = "https://github.com/guywaldman/orch"
keywords = ["llm", "openai", "ollama", "rust"]

[dependencies]
orch_response = { path = "../response" }
orch_response_derive = { path = "../response_derive" }
async-gen = "0.2.3"
dotenv = "0.15.0"
dyn-clone = "1.0.17"
openai-api-rs = "5.0.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.63"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
tokio-stream = "0.1.15"
async-trait = "0.1.81"
