[package]
name = "orch_response"
version = "0.0.11"
edition = "2021"
license = "MIT"
description = "Models for orch Executor responses"
homepage = "https://github.com/guywaldman/orch"
repository = "https://github.com/guywaldman/orch"
keywords = ["llm", "openai", "ollama", "rust"]

[dependencies]
serde = "1.0.204"
serde_json = "1.0.120"
