[package]
name = "orch_response_derive"
version = "0.0.15"
edition = "2021"
license = "MIT"
description = "Derive macros for orch Executor responses"
homepage = "https://github.com/guywaldman/orch"
repository = "https://github.com/guywaldman/orch"
keywords = ["llm", "openai", "ollama", "rust"]

[lib]
proc-macro = true

[dependencies]
orch_response = { path = "../response", version = "0.0.15" }
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
