[package]
name = "janus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
derive_builder = "0.12.0"
dotenv = "0.15.0"
openai = "1.0.0-alpha.9"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
