[package]
name = "orch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
derive_builder = "0.20.0"
dotenv = "0.15.0"
openai-api-rs = "5.0.2"
pdf-extract = "0.7.7"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serpapi-search-rust = "0.1.1"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
url = "2.4.0"
