[package]
name = "orch"
version = "0.0.1"
edition = "2021"

[dependencies]
async-gen = "0.2.3"
dotenv = "0.15.0"
dyn-clone = "1.0.17"
openai-api-rs = "5.0.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.63"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
tokio-stream = "0.1.15"
